@@ -7,7 +7,6 @@ import com.fasttime.domain.article.exception.ArticleNotFoundException;
 import com.fasttime.domain.article.repository.ArticleRepository;
 import com.fasttime.domain.article.service.usecase.ArticleQueryUseCase;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -20,7 +19,8 @@ public class ArticleQueryService implements ArticleQueryUseCase {
     private final ArticleSettingProvider articleSettingProvider;
     private final ArticleRepository articleRepository;
 
-    public ArticleQueryService(ArticleSettingProvider articleSettingProvider, ArticleRepository articleRepository) {
+    public ArticleQueryService(ArticleSettingProvider articleSettingProvider,
+        ArticleRepository articleRepository) {
         this.articleSettingProvider = articleSettingProvider;
         this.articleRepository = articleRepository;
     }
@@ -35,7 +35,8 @@ public class ArticleQueryService implements ArticleQueryUseCase {
             .title(targetArticle.getTitle())
             .content(targetArticle.getContent())
             .nickname(targetArticle.isAnonymity() ?
-                articleSettingProvider.getAnonymousNickname() : targetArticle.getMember().getNickname())
+                articleSettingProvider.getAnonymousNickname()
+                : targetArticle.getMember().getNickname())
             .anonymity(targetArticle.isAnonymity())
             .likeCount(targetArticle.getLikeCount())
             .hateCount(targetArticle.getHateCount())
@@ -45,14 +46,15 @@ public class ArticleQueryService implements ArticleQueryUseCase {
     }
 
     @Override
-    public List<ArticlesResponse> search(ArticlesSearchServiceRequest request) {
+    public List<ArticlesResponse> search(ArticlesSearchRequest request) {
         return articleRepository.search(request)
             .stream()
             .map(repositoryDto -> ArticlesResponse.builder()
                 .id(repositoryDto.getId())
                 .title(repositoryDto.getTitle())
-                .nickname(repositoryDto.isAnonymity() ? articleSettingProvider.getAnonymousNickname()
-                    : repositoryDto.getNickname())
+                .nickname(
+                    repositoryDto.isAnonymity() ? articleSettingProvider.getAnonymousNickname()
+                        : repositoryDto.getNickname())
                 .anonymity(repositoryDto.isAnonymity())
                 .likeCount(repositoryDto.getLikeCount())
                 .hateCount(repositoryDto.getHateCount())
@@ -60,11 +62,11 @@ public class ArticleQueryService implements ArticleQueryUseCase {
                 .createdAt(repositoryDto.getCreatedAt())
                 .lastModifiedAt(repositoryDto.getLastModifiedAt())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
-    public List<ArticlesResponse> findReportedArticles(ReportedArticlesSearchServiceRequest request) {
+    public List<ArticlesResponse> findReportedArticles(ReportedArticlesSearchRequest request) {
         return articleRepository
             .findAllByReportStatus(cretePageRequest(request), request.reportStatus())
             .stream()
@@ -76,10 +78,10 @@ public class ArticleQueryService implements ArticleQueryUseCase {
                 .createdAt(result.getCreatedAt())
                 .lastModifiedAt(result.getCreatedAt())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    private PageRequest cretePageRequest(ReportedArticlesSearchServiceRequest request) {
+    private PageRequest cretePageRequest(ReportedArticlesSearchRequest request) {
         return PageRequest.of(request.pageNum(), request.pageSize(),
             Sort.by(articleSettingProvider.getDefaultOrderField()).descending());
     }
